<resources>
    <string name="app_name">Buildafrique Partner Network</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="invite">Invite</string>
    <string name="welcome_title_1">Refer business leads at the comfort of your phone</string>
    <string name="customers">Customers</string>
    <string name="leads">Leads</string>
    <string name="opportunities">Opportunities</string>
    <string name="quotations">Quotations</string>
    <string name="sales_orders">Sales Orders</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="current_location">Current location</string>
    <string name="occupation">Occupation</string>
    <string name="create_account">Create Account</string>
    <string name="error_required">Required Field.</string>
    <string name="error_wrong_combinations">Wrong username and password</string>
    <string name="won">Won</string>
    <string name="details">Details</string>
    <string name="sales_order_no">Sales Order No.</string>
    <string name="reference">Reference</string>
    <string name="state">State</string>
    <string name="order_line">Order Lines</string>
    <string name="date_created">Date Created</string>
    <string name="lead_name">Name of lead</string>
    <string name="description">Description</string>
    <string name="planned_review">Planned review</string>
    <string name="partner">Partner</string>
    <string name="partner_name">Partner Name</string>
    <string name="name_of_contact">Name of contact</string>
    <string name="mobile">Mobile</string>
    <string name="tag_line"><![CDATA[Mobile Affiliate and Referral Program for Real Estate Products & Development Solutions]]></string>
    <string name="compose">Compose</string>
    <string name="log_out">Log Out</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="oportunities">Oportunities</string>
    <string name="products">Products</string>
    <string name="negotiation">Negotiation</string>
    <string name="progress">Progress</string>
    <string name="lost">Lost</string>
    <string name="qualified">In Progress</string>
    <string name="commisions">Commissions</string>
    <string name="bonuses">Bonuses</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="to">To</string>
    <string name="save_draft">Save as Draft</string>
    <string name="discard">Discard</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="available">Available</string>
    <string name="archive">Archive</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_redeemed">Redeemed/Paid</string>
    <string name="dummy_total_paid">Ksh 100</string>
    <string name="share_via">Share Via...</string>
    <string name="invite_message">Hello! “You have got to try “Buildafrique™ Partner Network”, the first Affiliate Marketing Program and Online Referral Mobile App. for real estate &amp; development solutions in Kenya.\n\n
        Download App. and Register to start making business referral to earn 10% commission on your first successful referral, and continue to earn more commissions, bonuses and loyalty points’ rewards with every other successful referrall.
    </string>
    <string name="dashboard">Dashboard</string>
    <string name="resources">Resources</string>
    <string name="edit">Edit</string>
    <string name="add_customer">Add Customer</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="add_nw_lead">Add New Lead</string>
    <string name="how_it_works">How it works</string>
    <string name="add_lead">Add Lead</string>
    <string name="lead_details">Lead Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="send_message">Send Message</string>
    <string name="share">Share</string>
    <string name="in_progress">In Progress</string>
    <string name="from">From</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="send_code_to_friends">Send Code to Friends</string>
    <string name="send_invite">Send Invite</string>
    <string name="marketing_materials">Marketing Materials</string>
    <string name="invite_text">Invite friends to sign up using your promo code and get a chance to earn bonus points for each sign up.</string>
    <string name="customer_mobile">Customer Phone</string>
    <string name="customer_email">Customer Email</string>
    <string name="invite_via">Invite Friends Via</string>
    <string name="select_customer">Select Customer</string>
    <string name="refferal_code">Invite Promo Code (Optional)</string>
    <string name="redeem_commisions">Redeem Commission</string>
    <string name="mpesa">MPESA</string>
    <string name="bank">BANK</string>
    <string name="paypal">PAYPAL</string>
    <string name="convert">Convert to loyalty points</string>
    <string name="redeem_loyalty">Redeem Loyalty</string>
    <string name="redeem_bonus">Redeem Bonus</string>
    <string name="redeem_loyalty_points">Redeem Loyalty Points</string>
    <string name="loyalty_1"><![CDATA[Redeem <b>200</> points for : Consultancy Services for a Residential House Development]]></string>
    <string name="loyalty_2"><![CDATA[Redeem <b>250</> points for : Feasibility Studies ]]></string>
    <string name="loyalty_3"><![CDATA[Redeem <b>300</> points for : Consultancy Services for a Commercial Development of a limit of Kshs. 50,000,000.00 ]]></string>
    <string name="loyalty_4"><![CDATA[Redeem <b>400</> points for : Consultancy Services for a Commercial Development of a limit of Kshs. 100,000,000.00 ]]></string>
    <string name="loyalty_5"><![CDATA[Redeem <b>500</> points for : Consultancy Services for a Commercial Development of a limit of Kshs. 200,000,000.00  ]]></string>
    <string name="loyalty_6"><![CDATA[Redeem <b>600</> points for : Consultancy Services for a Commercial Development of a limit between Kshs. 200,000,000.00 and Kshs. 500,000,000.00 ]]></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="next">Next</string>
    <string name="enter_verification">Enter Verification Code</string>
    <string name="confirm_password">Confirm Pasword</string>
    <string name="enter_code">Enter Code</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy">Privacy</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="customer">Customer</string>
    <string name="username">Username</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="successfull_redeem_bonus">Bonuses Redeemed Successfully</string>
    <string name="message_successfull_bonus_redemption">You shall receive SMS notification once payment has been made.</string>
    <string name="successfull_redeem_commission">Commissions Redeemed Successfully</string>
    <string name="message_successfull_commission_redemption">You shall receive SMS notification once payment has been made.</string>
    <string name="successfull_redeem_loyalty">Loyalty Points Redeemed Successfully</string>
    <string name="message_successful_redeem_loyalty">You shall receive SMS notification to confirm award of the service.</string>
    <string name="amount_for_1_loyalty_point">Amount for 1 Loyalty point</string>
    <string name="number_of_loyalty_points">Number of Loyalty Points</string>
    <string name="refer_customers">Refer Customers</string>
</resources>
