<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compose"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/compose" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/inbox" />

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/opportunities">
            <menu>
                <item
                    android:id="@+id/nav_won"
                    android:icon="@drawable/ic_business_center_black_24dp"
                    android:title="@string/won" />
                <item
                    android:id="@+id/nav_qualified"
                    android:icon="@drawable/ic_card_membership_black_24dp"
                    android:title="@string/qualified" />
                <item
                    android:id="@+id/nav_negotiation"
                    android:icon="@drawable/ic_forum_black_24dp"
                    android:title="@string/progress" />
                <item
                    android:id="@+id/nav_lost"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/lost" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_products"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/products"/>
    </group>
</menu>