<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:elevation="4dp"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Lead details"
            app:titleTextColor="@color/white" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eeeeee"
                    android:padding="15dp"
                    android:text="@string/details" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="15dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lead_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_lead_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="10ss" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/description"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="10ss" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/state"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="10ss" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/planned_review"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_review"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="10ss" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/date_created"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="10ss" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#eeeeee"
                    android:padding="15dp"
                    android:text="@string/partner" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="15dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partner_name"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_partner_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/name_of_contact"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_contact_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/mobile"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>